# Parser_Embarque

./: .gitignore  CMakeLists.txt  schema.json
automation_code_builder/: CMakeLists.txt  main.cpp
automation_code_builder/drivers/arduino/: BMP280.hpp  GY21.hpp  HCSR501.hpp  LED.hpp  supported_drivers.txt
automation_code_builder/include/: LED.hpp  arduino_code_builder.hpp  arduino_context.hpp  automation.hpp  automation_test.hpp  code_builder.hpp  code_builder_factory.hpp  driver.hpp  hcsr501.hpp  validator.hpp
automation_code_builder/json-schema-validator/: CMakeLists.txt
automation_code_builder/json-schema-validator/.github/workflow/: release.yaml  test.yaml
automation_code_builder/json_schema_validator/: CMakeLists.txt
automation_code_builder/ressources/: exemple_config.json  exemple_config2.json  exemple_config3.json  exemple_config4.json  main_code.cpp
automation_code_builder/src/: arduino_code_builder.cpp  code_builder.cpp  driver.cpp  validator.cpp
automation_code_builder/tests_automation/: CMakeLists.txt
automation_code_builder/tests_automation/model/: test_jsonValid.cpp
automation_code_builder/tests_automation/test_files/: noBehaviors.json  noDevice.json  noElse.json  noID.json  noIf.json  noTarget.json  noThen.json  noType.json  validJson.json
automation_compilator/: CMakeLists.txt  README.md  main .cpp  main.cpp  schema_validator.json
automation_compilator/include/: LED.hpp  arduino_code_builder.hpp  arduino_context.hpp  automation.hpp  automation_test.hpp  code_builder.hpp  hcsr501.hpp  test_code_builder.hpp
automation_compilator/ressources/: exemple_config.json
automation_compilator/schema/: schema.json
automation_compilator/src/: arduino_code_builder.cpp  automation_test.cpp  main.cpp  test_code_builder.cpp  validator.cpp
automation_compilator/tests/: CMakeLists.txt  file_exists.cpp  json_correct.cpp  json_valid.cpp  schema_create.cpp
automation_compilator/tests/test_file/: no_behaviors.json  no_device.json  no_else.json  no_id.json  no_if.json  no_target.json  no_then.json  no_type.json  not_uniq_item.json  test.json
expression_parser/: CMakeLists.txt
expression_parser/include/: automation.hpp  automation_test.hpp  container.hpp  expr_affectation.hpp  expr_functions.hpp  expr_logical.hpp  expr_mathematical.hpp  expression.hpp  parser.hpp  utils.hpp  validation_handler.hpp
expression_parser/ressources/: exemple_config.json
expression_parser/src/: CMakeLists.txt  expr_affectation.cpp  expr_functions.cpp  expr_mathematical.cpp  expression.cpp  parser.cpp  utils.cpp  validation_handler.cpp
expression_parser/tests/: CMakeLists.txt
expression_parser/tests/model/: simplify.test.cpp
json_schema_validator/: CMakeLists.txt
parser_client/: CMakeLists.txt  main.cpp
